syntax = "proto3";
package management;

option go_package = "github.com/siderolabs/omni-infra-provider-bare-metal/internal/agent";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message SetIPMICredentialsRequest {}

message SetIPMICredentialsResponse {
  string password = 1;
}

service AgentService {
  rpc SetIPMICredentials(SetIPMICredentialsRequest) returns (SetIPMICredentialsResponse);
}
